--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="main">
         <h1 class="center">
         <img style="vertical-align:middle" src="images/logo.png" width="64" height="64"/>
-        LottoBotto</h1>
+        Cards Against Discord</h1>
         <br />
         <center><h1>A Cards Against Humanity bot for Discord</h1>
         <button class="invite" onclick="window.location.href = 'https://discordapp.com/oauth2/authorize?client_id=561675421364781069&permissions=313408&scope=bot';">Invite</button>
