--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <!-- "...it really does look like the definition of incompetence" -->
     
-    <title>LottoBotto</title>
+    <title>Cards Against Discord</title>
     <link rel="stylesheet" type="text/css" href="indexstyles.css" />
     <style>
         body { 
