--- a/pages/help.html
+++ b/pages/help.html
@@ -11,7 +11,7 @@
 <style>
     .sidebar {
         height: 100%;
-        width: 180px;
+        width: 200px;
         position: fixed;
         z-index: 1;
         top: 0;
@@ -118,6 +118,7 @@
         <a href="help.html#leave">cad leave</a>
         <a href="help.html#scores">cad scores</a>
         <a href="help.html#new_cards">cad reshuffle</a>
+        <a href="help.html#language">cad language</a>
         <div class="header">Non-DM</div>
         <a href="help.html#stats">cad stats</a>
         <a href="help.html#credits">cad credits</a>
@@ -189,6 +190,12 @@
             <p class="desc">Reshuffles your hand, giving you new cards.</p>
             <p class="format">Format: <code class="code">cad reshuffle</code></p>
             <p class="format">Usage example #1: <code class="code">cad reshuffle</code></p>
+        </div>
+        <div class="command">
+            <h1 id="language">cad language</h1>
+            <p class="desc">Change your language with a two letter language code.</p>
+            <p class="format">Format: <code class="code">cad language [language code]</code></p>
+            <p class="format">Usage example #1: <code class="code">cad language ar</code></p>
         </div>
         <div class="spacer">Non-DM</div>
         <div class="command">
